# File-Manager

./: Cargo.toml  README.md
src/: fs_utils.rs  input.rs  input_handler.rs  lib.rs  main.rs  preview.rs  state.rs  ui.rs
src/input_handlers/: file_manipulation.rs  file_navigation.rs  mod.rs  modes.rs
tests/: test_fs_utils.rs
