[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", features = ["crossterm"], default-features = false }
crossterm = "0.23.0"
regex = "1.9.3"

[dev-dependencies]
tempfile = "3.8.0"